--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group 'starsheep'
@@ -11,6 +12,21 @@ repositories {
     mavenCentral()
 }
 
+//starsheep custom task
+task(rundev, dependsOn: 'classes', type: JavaExec) {
+   main = 'developerTool.ApplicationWindow'
+   classpath = sourceSets.main.runtimeClasspath
+   //args 'mrhaki'
+   //systemProperty 'simple.message', 'Hello '
+}
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    
+    // https://mvnrepository.com/artifact/com.jgoodies/jgoodies-common
+	compile group: 'com.jgoodies', name: 'jgoodies-common', version: '1.8.0'
+    
+    // https://mvnrepository.com/artifact/com.jgoodies/jgoodies-forms
+	compile group: 'com.jgoodies', name: 'jgoodies-forms', version: '1.8.0'
+    
 }
