--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,12 @@ repositories {
     mavenCentral()
 }
 
+task(cmdTest, dependsOn: 'classes', type: JavaExec) {
+    main = 'cmdTest.CmdTest'
+    classpath = sourceSets.main.runtimeClasspath
+}
+
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
