--- a/build.gradle
+++ b/build.gradle
@@ -28,5 +28,7 @@ dependencies {
     
     // https://mvnrepository.com/artifact/com.jgoodies/jgoodies-forms
 	compile group: 'com.jgoodies', name: 'jgoodies-forms', version: '1.8.0'
-    
+	
+	// https://mvnrepository.com/artifact/org.graphstream/gs-core
+	compile group: 'org.graphstream', name: 'gs-core', version: '1.3'
 }
