--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,11 @@ task(rundev, dependsOn: 'classes', type: JavaExec) {
    //systemProperty 'simple.message', 'Hello '
 }
 
+task(devApp, dependsOn: 'classes', type: JavaExec) {
+   main = 'devApp.Application'
+   classpath = sourceSets.main.runtimeClasspath
+}
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     
