--- a/build.gradle
+++ b/build.gradle
@@ -36,4 +36,9 @@ dependencies {
 	
 	// https://mvnrepository.com/artifact/org.graphstream/gs-core
 	compile group: 'org.graphstream', name: 'gs-core', version: '1.3'
+
+// https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api
+    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.4.0-b180830.0359'
+
+
 }
