--- a/build.gradle
+++ b/build.gradle
@@ -37,11 +37,13 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.graphstream/gs-core
 	compile group: 'org.graphstream', name: 'gs-core', version: '1.3'
 
-    // https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api
-    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.4.0-b180830.0359'
+   	// https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api
+	compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
+   	
     
     // https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-impl
-    compile group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.4.0-b180830.0438'
+	compile group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.3.2'
+
 
     // https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-core
     compile group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.3.0.1'
