--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,6 @@ repositories {
 task(rundev, dependsOn: 'classes', type: JavaExec) {
    main = 'devTool.ApplicationWindow'
    classpath = sourceSets.main.runtimeClasspath
-   //args 'mrhaki'
-   //systemProperty 'simple.message', 'Hello '
 }
 
 task(devApp, dependsOn: 'classes', type: JavaExec) {
@@ -45,4 +43,7 @@ dependencies {
 
     // https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-core
     compile group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.3.0.1'
+    
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+	compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
 }
