--- a/build.gradle
+++ b/build.gradle
@@ -34,16 +34,10 @@ dependencies {
 	
 	// https://mvnrepository.com/artifact/org.graphstream/gs-core
 	compile group: 'org.graphstream', name: 'gs-core', version: '1.3'
-
-   	// https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api
-	compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
-    
-    // https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-impl
-	compile group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.3.2'
-
-    // https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-core
-    compile group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.3.0.1'
     
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
+	
+	// https://mvnrepository.com/artifact/commons-io/commons-io
+	compile group: 'commons-io', name: 'commons-io', version: '2.6'
 }
